traversal.snake.Snake.scala.error
Compilation error:
Snake:4: error: type mismatch;
 found   : Int(0)
 required: plm.universe.Direction
    var a:Direction=0
                    ^Snake:28: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^